fix: allow grade update after course end
# Conflicts:
#	src/main/java/com/unigrade/api/repository/ExamRepository.java